@@ -1,6 +1,8 @@
 2006-06-29 Alasdiar Allan <aa@astro.ex.ac.uk>
 
-	* bin/ogle_parsemail.pl: Added meta.ref.url to the photometry data
+	* bin/ogle_parsemail.pl: Added meta.ref.url to the photometry data.
+	  Fixed big fix where the T_{max} shipping as the timestamp on the
+	  packet.
 
         * www/*: Moved modifications into CVS from the live site on estar3.
 	
